fix flex-wrap

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -11,7 +11,7 @@ ul {
 .team-members {
   display: flex;
   justify-content: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 20px;
   overflow-x: auto;
   padding: 10px;
